# aoc-2025

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: __init__.py  base_solution.py
src/aoc_solutions/: __init__.py  base_solution.py
src/aoc_solutions/day_1/: solution.py
src/aoc_solutions/day_2/: __init__.py  solution.py
src/aoc_solutions/day_3/: __init__.py  solution.py
src/aoc_solutions/day_4/: __init__.py  solution.py
src/aoc_solutions/day_5/: __init__.py  solution.py
src/aoc_solutions/day_6/: __init__.py  solution.py
src/day_1/: __init__.py  solution.py
